Use correct font-family's and correct spacing between columns in the table

--- a/packages/ui-extensions-dev-console/src/foundation/Layout/Layout.module.scss
+++ b/packages/ui-extensions-dev-console/src/foundation/Layout/Layout.module.scss
@@ -10,8 +10,6 @@
   height: 100%;
   width: 100%;
   color: var(--dc-color-white);
-  font-family: var(--dc-font);
-  font-size: 1.3rem;
   font-weight: var(--dc-font-weight);
   overflow: hidden;
 
@@ -54,6 +52,8 @@
 
   h1 {
     font-weight: var(--dc-font-weight-700);
+    font-family: monospace;
+    font-size: 1.4rem;
   }
 }
 
