--- a/packages/ui-extensions-dev-console/src/foundation/Theme/Reset.module.scss
+++ b/packages/ui-extensions-dev-console/src/foundation/Theme/Reset.module.scss
@@ -6,20 +6,13 @@
 
 html,
 body {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 400;
   line-height: 2rem;
   text-transform: initial;
   letter-spacing: initial;
   font-weight: 400;
   color: var(--p-text);
-}
-
-@media (min-width: 40em) {
-  html,
-  body {
-    font-size: 1.4rem;
-  }
 }
 
 html,
