--- a/packages/ui-extensions-dev-console/src/foundation/Theme/Theme.module.scss
+++ b/packages/ui-extensions-dev-console/src/foundation/Theme/Theme.module.scss
@@ -23,10 +23,6 @@
   --dc-color-red: rgb(255, 87, 77);
 
   /* Font */
-  --dc-font: 'SF Pro Text', monospace;
-  --dc-font-mono: 'SF Mono', monospace;
-  --dc-font-pro: 'SF Pro Text', monospace;
-  --dc-font-compact: 'SF Compact Text', monospace;
   --dc-font-weight-400: 200;
   --dc-font-weight-400: 400;
   --dc-font-weight-500: 600;
