--- a/packages/ui-extensions-dev-console/src/foundation/Toast/Toast.module.scss
+++ b/packages/ui-extensions-dev-console/src/foundation/Toast/Toast.module.scss
@@ -16,7 +16,6 @@
   --toastify-toast-background: var(--dc-color-white);
   --toastify-toast-min-height: 6.2rem;
   --toastify-toast-max-height: 6.2rem;
-  --toastify-font-family: var(--dc-font-mono);
   --toastify-z-index: 9999;
 
   --toastify-text-color-dark: var(--dc-color-white);
