--- a/packages/ui-extensions-dev-console/src/sections/Extensions/components/ExtensionRow/components/PreviewLinks/PreviewLinks.module.scss
+++ b/packages/ui-extensions-dev-console/src/sections/Extensions/components/ExtensionRow/components/PreviewLinks/PreviewLinks.module.scss
@@ -1,7 +1,3 @@
-.NotApplicable {
-  font-family: var(--dc-font-compact);
-}
-
 .PreviewLinksTitle {
   font-style: italic;
   font-weight: var(--dc-font-weight-500);
