--- a/packages/ui-extensions-dev-console/src/sections/Extensions/components/NotApplicable/NotApplicable.module.scss
+++ b/packages/ui-extensions-dev-console/src/sections/Extensions/components/NotApplicable/NotApplicable.module.scss
@@ -1,4 +1,3 @@
 .NotApplicable {
-  font-family: var(--dc-font-compact);
   font-weight: var(--dc-font-weight-200);
 }
